force-app/main/default/objects/Session_Notes__c/Session_Notes__c.object-meta.xml
<CustomObject>
    <label>Session Notes</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Session Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>