force-app/main/default/objects/Session_Notes__c/fields/Account_Manager_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Next_Steps__c</fullName>
    <label>Client Solutions Follow-up</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>