force-app/main/default/objects/Session_Notes__c/fields/Action_items__c.field-meta.xml
<CustomField>
    <fullName>Action_items__c</fullName>
    <label>Action items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>