force-app/main/default/objects/Session_Notes__c/fields/AM_email__c.field-meta.xml
<CustomField>
    <fullName>AM_email__c</fullName>
    <label>AM email</label>
    <type>Email</type>
</CustomField>