force-app/main/default/objects/Session_Notes__c/fields/Back_End_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Logistics__c</fullName>
    <inlineHelpText>What comments do you have on the Prosci back-end logistics?</inlineHelpText>
    <label>Back-End Logistics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>