force-app/main/default/objects/Session_Notes__c/fields/BEO__c.field-meta.xml
<CustomField>
    <fullName>BEO__c</fullName>
    <inlineHelpText>Did the BEO match the services that were delivered during the program?</inlineHelpText>
    <label>BEO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>