force-app/main/default/objects/Session_Notes__c/fields/Billing_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Billing_Feedback__c</fullName>
    <inlineHelpText>Was the billing done correctly, without confusion? If there was confusion, how was it handled?</inlineHelpText>
    <label>Billing Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>