force-app/main/default/objects/Session_Notes__c/fields/Business_Development_Potential__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Potential__c</fullName>
    <label>Business Development Potential</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>