force-app/main/default/objects/Session_Notes__c/fields/Call_date__c.field-meta.xml
<CustomField>
    <fullName>Call_date__c</fullName>
    <label>Call date</label>
    <type>Date</type>
</CustomField>