force-app/main/default/objects/Session_Notes__c/fields/Cancel__c.field-meta.xml
<CustomField>
    <fullName>Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel</label>
    <type>Checkbox</type>
</CustomField>