force-app/main/default/objects/Session_Notes__c/fields/Class_Themes_Present_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Class_Themes_Present_Feedback__c</fullName>
    <label>Challenges for Participants</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>