force-app/main/default/objects/Session_Notes__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discounts</label>
    <type>Checkbox</type>
</CustomField>