force-app/main/default/objects/Session_Notes__c/fields/Feedback_for_Logistics_to_Improve__c.field-meta.xml
<CustomField>
    <fullName>Feedback_for_Logistics_to_Improve__c</fullName>
    <inlineHelpText>How could your experience with the LC better? Are there opportunities for improvement?</inlineHelpText>
    <label>Feedback for Logistics to Improve</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>