force-app/main/default/objects/Session_Notes__c/fields/Food_and_Beverage_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Food_and_Beverage_Feedback__c</fullName>
    <inlineHelpText>How would you rate the overall quality of food and beverage?</inlineHelpText>
    <label>Food and Beverage Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>