force-app/main/default/objects/Session_Notes__c/fields/General_Feedback__c.field-meta.xml
<CustomField>
    <fullName>General_Feedback__c</fullName>
    <inlineHelpText>What is your general feedback on the course and participants?</inlineHelpText>
    <label>General Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>