force-app/main/default/objects/Session_Notes__c/fields/General_Observations__c.field-meta.xml
<CustomField>
    <fullName>General_Observations__c</fullName>
    <label>General Observations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>