force-app/main/default/objects/Session_Notes__c/fields/Guest_Room_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Guest_Room_Feedback__c</fullName>
    <inlineHelpText>What feedback do you have about the guest rooms?</inlineHelpText>
    <label>Guest Room Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>