force-app/main/default/objects/Session_Notes__c/fields/Identified_Departments_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Identified_Departments_Feedback__c</fullName>
    <description>Please identify what Departments were represented. Did you note any tension/control issues among Departments? Was there an Alpha person or Dept in the room?</description>
    <inlineHelpText>Please identify what Departments were represented. Did you note any tension/control issues among Departments? Was there an Alpha person or Dept in the room?</inlineHelpText>
    <label>Identified Departments Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>