force-app/main/default/objects/Session_Notes__c/fields/If_you_scored_below_8_why__c.field-meta.xml
<CustomField>
    <fullName>If_you_scored_below_8_why__c</fullName>
    <inlineHelpText>If you scored them below an 8, please provide context.</inlineHelpText>
    <label>If you scored below 8, why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>