force-app/main/default/objects/Session_Notes__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <formula>Training_Event__r.Instructor__r.FirstName +&quot; &quot;+  Training_Event__r.Instructor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor</label>
    <type>Text</type>
</CustomField>