force-app/main/default/objects/Session_Notes__c/fields/Karaoke_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Feedback__c</fullName>
    <inlineHelpText>Was the Karaoke DJ engaged with the group? Was there a diverse selection of songs available to sing?</inlineHelpText>
    <label>Karaoke Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>