force-app/main/default/objects/Session_Notes__c/fields/Key_Decision_Makers_Influencers__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Makers_Influencers__c</fullName>
    <label>Key Decision Makers/Influencers</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>