force-app/main/default/objects/Session_Notes__c/fields/Key_Questions_from_Session__c.field-meta.xml
<CustomField>
    <fullName>Key_Questions_from_Session__c</fullName>
    <description>Please make note of key questions – particularly those that reveal org maturity or those that sparked debate/uncertainty/discomfort among participants.</description>
    <inlineHelpText>Please make note of key questions – particularly those that reveal org maturity or those that sparked debate/uncertainty/discomfort among participants.</inlineHelpText>
    <label>Key Questions from Session</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>