force-app/main/default/objects/Session_Notes__c/fields/Lead_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Account #1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Session Notes (Lead Account #1)</relationshipLabel>
    <relationshipName>Session_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>