force-app/main/default/objects/Session_Notes__c/fields/Lead_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Account #2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Session Notes (Lead Account #2)</relationshipLabel>
    <relationshipName>Session_Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>