force-app/main/default/objects/Session_Notes__c/fields/Lead_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Account #3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Session Notes (Lead Account #3)</relationshipLabel>
    <relationshipName>Session_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>