force-app/main/default/objects/Session_Notes__c/fields/Lead_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contact #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Notes (Lead Contact #1)</relationshipLabel>
    <relationshipName>Session_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>