force-app/main/default/objects/Session_Notes__c/fields/Lead_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contact #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Notes (Lead Contact #2)</relationshipLabel>
    <relationshipName>Session_Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>