force-app/main/default/objects/Session_Notes__c/fields/Lead_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contact #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Notes (Lead Contact #3)</relationshipLabel>
    <relationshipName>Session_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>