force-app/main/default/objects/Session_Notes__c/fields/Lead_Note_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Note_2__c</fullName>
    <label>Opportunity Note #2</label>
    <type>TextArea</type>
</CustomField>