force-app/main/default/objects/Session_Notes__c/fields/Lead_Note_2_Long__c.field-meta.xml
<CustomField>
    <fullName>Lead_Note_2_Long__c</fullName>
    <label>Opportunity Note #2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>