force-app/main/default/objects/Session_Notes__c/fields/Lead_Note_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Note_3__c</fullName>
    <label>Opportunity Note #3</label>
    <type>TextArea</type>
</CustomField>