force-app/main/default/objects/Session_Notes__c/fields/Lead_Notes_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes_1__c</fullName>
    <label>Opportunity Notes #1</label>
    <type>TextArea</type>
</CustomField>