force-app/main/default/objects/Session_Notes__c/fields/Lead_Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Opportunity_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity #3</label>
    <type>Checkbox</type>
</CustomField>