force-app/main/default/objects/Session_Notes__c/fields/Logistices_Effectiveness_Updating_SF__c.field-meta.xml
<CustomField>
    <fullName>Logistices_Effectiveness_Updating_SF__c</fullName>
    <inlineHelpText>Effectiveness of Logistics to update Salesforce information (Scale 1-5)</inlineHelpText>
    <label>Logistics Effectiveness Updating SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>