force-app/main/default/objects/Session_Notes__c/fields/Logistics_clearly_answered_my_questions__c.field-meta.xml
<CustomField>
    <fullName>Logistics_clearly_answered_my_questions__c</fullName>
    <inlineHelpText>Logistics clearly answered all my questions (scale 1-5)</inlineHelpText>
    <label>Logistics Clearly Answered my Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>