force-app/main/default/objects/Session_Notes__c/fields/Logistics_Response_Time_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Response_Time_Effectiveness__c</fullName>
    <inlineHelpText>Logistics Coordinator Response Time (Scale 1-5)</inlineHelpText>
    <label>Logistics Response Time Effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>