force-app/main/default/objects/Session_Notes__c/fields/Meeting_Room_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Feedback__c</fullName>
    <inlineHelpText>How were the meeting rooms? Were you able to control lighting and temperature? If not, was it easy to have them adjusted as necessary?</inlineHelpText>
    <label>Meeting Room Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>