force-app/main/default/objects/Session_Notes__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-session sponsor</fullName>
            </value>
            <value>
                <fullName>Post-session sponsor</fullName>
            </value>
            <value>
                <fullName>Session Notes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Course Report</fullName>
            </value>
            <value>
                <fullName>Pre-TTT success call</fullName>
            </value>
            <value>
                <fullName>Audit coaching</fullName>
            </value>
            <value>
                <fullName>General TTT support</fullName>
            </value>
            <value>
                <fullName>Advanced tracks-Instructor</fullName>
            </value>
            <value>
                <fullName>Advanced tracks-Deployment</fullName>
            </value>
            <value>
                <fullName>Advanced tracks-Practitioner</fullName>
            </value>
            <value>
                <fullName>Logistics summary</fullName>
            </value>
            <value>
                <fullName>Open Enrollment call log</fullName>
            </value>
            <value>
                <fullName>Public Session Course Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>