force-app/main/default/objects/Session_Notes__c/fields/of_participants__c.field-meta.xml
<CustomField>
    <fullName>of_participants__c</fullName>
    <formula>Training_Event__r.No_of_Trainees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>