force-app/main/default/objects/Session_Notes__c/fields/Org_CM_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Org_CM_Maturity__c</fullName>
    <description>What is your overall sense of Org maturity re: CM?</description>
    <inlineHelpText>What is your overall sense of Org maturity re: CM?</inlineHelpText>
    <label>Org CM Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-existent</fullName>
            </value>
            <value>
                <fullName>Some but not great</fullName>
            </value>
            <value>
                <fullName>Pretty Good</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>