force-app/main/default/objects/Session_Notes__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>25</length>
    <type>Text</type>
</CustomField>