force-app/main/default/objects/Session_Notes__c/fields/Other_observations_or_event_details__c.field-meta.xml
<CustomField>
    <fullName>Other_observations_or_event_details__c</fullName>
    <label>Other observations or event details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>