force-app/main/default/objects/Session_Notes__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>