force-app/main/default/objects/Session_Notes__c/fields/Participant_Engagement_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Participant_Engagement_Feedback__c</fullName>
    <description>Comments for how engaged participants were</description>
    <inlineHelpText>Comments for how engaged participants were</inlineHelpText>
    <label>Participant Engagement Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>