force-app/main/default/objects/Session_Notes__c/fields/Participant_Engagement_Rating__c.field-meta.xml
<CustomField>
    <fullName>Participant_Engagement_Rating__c</fullName>
    <description>On a scale of 1-10 how engaged were participants in the class?
(Scale: 1= Not engaged  10-Extremely engaged)</description>
    <inlineHelpText>On a scale of 1-10 how engaged were participants in the class?
(Scale: 1= Not engaged  10-Extremely engaged)</inlineHelpText>
    <label>Participant Engagement Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>