force-app/main/default/objects/Session_Notes__c/fields/Recommend_TSS_to_another_instructor__c.field-meta.xml
<CustomField>
    <fullName>Recommend_TSS_to_another_instructor__c</fullName>
    <inlineHelpText>How likely would you recommend the TSS to another instructor on a scale of 1-10?

Please keep in mind these competencies: Professionalism, Collaboration, Growth Mindset and Organization</inlineHelpText>
    <label>Recommend TSS to another instructor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Unlikely</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10 - Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>