force-app/main/default/objects/Session_Notes__c/fields/Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Reschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reschedule</label>
    <type>Checkbox</type>
</CustomField>