force-app/main/default/objects/Session_Notes__c/fields/Staff_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Staff_Feedback__c</fullName>
    <inlineHelpText>Was the staff friendly, available and responsive to your needs and participant special needs throughout the program? (Pay special attention to dietary needs &amp; Menu options, room change requests, handicap accommodations)</inlineHelpText>
    <label>Staff Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>