force-app/main/default/objects/Session_Notes__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <inlineHelpText>Do you have any suggestions for possible improvements at the venue that could improve the participant experience?</inlineHelpText>
    <label>Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>