force-app/main/default/objects/Session_Notes__c/fields/Technology_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Technology_Feedback__c</fullName>
    <inlineHelpText>Overall A/V (projector brightness, picture quality, etc.) &amp; Wi-Fi (Speed, connectivity, etc.) Quality</inlineHelpText>
    <label>Technology Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>