force-app/main/default/objects/Session_Notes__c/fields/Training_Manager__c.field-meta.xml
<CustomField>
    <fullName>Training_Manager__c</fullName>
    <formula>Training_Event__r.Training_Manager__r.FirstName +&quot; &quot;+  Training_Event__r.Training_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Manager</label>
    <type>Text</type>
</CustomField>