force-app/main/default/objects/Session_Notes__c/fields/Tuesday_Evening_Activity_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Evening_Activity_Feedback__c</fullName>
    <inlineHelpText>What was the overall participant experience during the Tuesday evening activity?</inlineHelpText>
    <label>Tuesday Evening Activity Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>