force-app/main/default/objects/Session_Notes__c/fields/Venue_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Venue_Feedback__c</fullName>
    <inlineHelpText>What is your feedback on this venue overall?</inlineHelpText>
    <label>Venue Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>