force-app/main/default/objects/Session_Notes__c/fields/Venue_Inquires__c.field-meta.xml
<CustomField>
    <fullName>Venue_Inquires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venue Inquires</label>
    <type>Checkbox</type>
</CustomField>