force-app/main/default/objects/Session_Notes__c/fields/Venue_Rating__c.field-meta.xml
<CustomField>
    <fullName>Venue_Rating__c</fullName>
    <inlineHelpText>How do you rate this overall venue?</inlineHelpText>
    <label>Venue Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 - Excellent</fullName>
            </value>
            <value>
                <fullName>4 - Good</fullName>
            </value>
            <value>
                <fullName>3 - Average</fullName>
            </value>
            <value>
                <fullName>2 - Needs Work</fullName>
            </value>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>