force-app/main/default/objects/Session_Notes__c/recordTypes/CAN_Session_Notes.recordType-meta.xml
<RecordType>
    <fullName>CAN_Session_Notes</fullName>
    <active>true</active>
    <description>Session notes for Canadian programs</description>
    <label>CAN Session Notes</label>
</RecordType>