force-app/main/default/objects/Session_Notes__c/recordTypes/Program_Advisors.recordType-meta.xml
<RecordType>
    <fullName>Program_Advisors</fullName>
    <active>true</active>
    <label>Program Advisors</label>
</RecordType>