force-app/main/default/objects/Session_Notes__c/recordTypes/Public_Enrollment_Call_log.recordType-meta.xml
<RecordType>
    <fullName>Public_Enrollment_Call_log</fullName>
    <active>true</active>
    <label>Public Enrollment Call log</label>
</RecordType>