force-app/main/default/objects/Session_Notes__c/recordTypes/Public_Session_Course_Report.recordType-meta.xml
<RecordType>
    <fullName>Public_Session_Course_Report</fullName>
    <active>true</active>
    <label>Public Session Course Report</label>
</RecordType>