force-app/main/default/objects/Session_Notes__c/recordTypes/Session_Notes.recordType-meta.xml
<RecordType>
    <fullName>Session_Notes</fullName>
    <active>true</active>
    <label>Session Notes</label>
</RecordType>