force-app/main/default/objects/Session_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Note_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Training_Event__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>